ml algos enhanced added

--- a/Notebooks/ml_algorithms/randomforest.ipynb
+++ b/Notebooks/ml_algorithms/randomforest.ipynb
@@ -411,15 +411,17 @@
      "output_type": "stream",
      "text": [
       "Accuracy for column 'Dst Port' : 0.9996137615335098\n",
-      "'Protocol' isn't a feature column\n",
-      "'Timestamp' isn't a feature column\n"
+      "Accuracy for column 'Protocol' : 0.6360870705481249\n",
+      "'Timestamp' isn't a feature column\n",
+      "Accuracy for column 'Flow Duration' : 0.9581050473261331\n",
+      "Accuracy for column 'Tot Fwd Pkts' : 0.7153708604534725\n"
      ]
     }
    ],
    "source": [
     "# to display individual features with a given range\n",
     "startC = 1\n",
-    "endC = 10\n",
+    "endC = 5\n",
     "for start_col in range(startC-1, endC, 1):\n",
     "    end_col = start_col + 1\n",
     "    try:\n",
@@ -461,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for the following features combined ['Flow Duration', 'Tot Fwd Pkts', 'Tot Bwd Pkts', 'TotLen Fwd Pkts', 'TotLen Bwd Pkts', 'Fwd Pkt Len Max', 'Fwd Pkt Len Min'] is:  0.9985468729087398\n"
+      "Accuracy for the following features combined ['Flow Duration', 'Tot Fwd Pkts', 'Tot Bwd Pkts'] is:  0.9807500655651717\n"
      ]
     }
    ],
@@ -470,7 +472,7 @@
     "# example:\n",
     "# from 4th col to 16th col\n",
     "bCol = 4\n",
-    "eCol = 10\n",
+    "eCol = 6\n",
     "X = df.iloc[:, bCol-1:eCol].values\n",
     "# X = df.iloc[:, 3:4].values\n",
     "y = df.iloc[:, -1].values\n",
@@ -501,18 +503,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cdea3cbb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for the following features combined ['Fwd Pkts/s', 'Bwd Pkts/s'] is:  0.994632033804325\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# specify column names to select\n",
     "selected_cols = ['Fwd Pkts/s','Bwd Pkts/s']\n",
@@ -546,19 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c51c3879",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for column 'Fwd Pkts/s' : 0.9521997667348616\n",
-      "Accuracy for column 'Bwd Pkts/s' : 0.848635781342613\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the list of column names to iterate over\n",
     "col_names = ['Fwd Pkts/s','Bwd Pkts/s']\n",
@@ -593,37 +578,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "4c4e0220",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for column ' Destination Port' : 0.8998202698118246\n",
-      "Accuracy for column ' Flow Duration' : 0.8749972932200576\n",
-      "Accuracy for column ' Total Fwd Packets' : 0.7744133505604839\n",
-      "Accuracy for column ' Total Backward Packets' : 0.8173609256465595\n",
-      "Accuracy for column ' Fwd Packet Length Mean' : 0.8329447600349356\n",
-      "Accuracy for column ' Bwd Packet Length Mean' : 0.8739290174027905\n",
-      "Accuracy for column ' Flow IAT Mean' : 0.8701250893237381\n",
-      "Accuracy for column ' Fwd IAT Mean' : 0.8706520091525253\n",
-      "Accuracy for column ' Bwd IAT Mean' : 0.7988321146808526\n",
-      "Accuracy for column 'Fwd PSH Flags' : 0.6364181000570228\n",
-      "Accuracy for column ' Bwd PSH Flags' : 0.6364181000570228\n",
-      "Accuracy for column ' Fwd URG Flags' : 0.6364181000570228\n",
-      "Accuracy for column ' Bwd URG Flags' : 0.6364181000570228\n",
-      "Accuracy for column ' Fwd Header Length' : 0.8167618250193084\n",
-      "Accuracy for column ' Bwd Header Length' : 0.8509610873315481\n",
-      "Accuracy for column ' Packet Length Mean' : 0.9005926043553893\n",
-      "Accuracy for column 'Init_Win_bytes_forward' : 0.9383792523512895\n",
-      "Accuracy for column ' Init_Win_bytes_backward' : 0.8721389336008835\n",
-      "Accuracy for column 'Active Mean' : 0.8347637161562281\n",
-      "Accuracy for column 'Idle Mean' : 0.8387336600717478\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cols = [1,2,3,4,9,13,17,22,27,31,32,33,34,35,36,41,67,68,71,75] # Example list of column indices to test\n",
     "for start_col in cols:\n",
@@ -658,18 +616,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "2a6e7063",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for the following features combined [' Destination Port', ' Flow Duration', ' Total Fwd Packets', ' Total Backward Packets', ' Fwd Packet Length Mean', ' Bwd Packet Length Mean', ' Flow IAT Mean', ' Fwd IAT Mean', ' Bwd IAT Mean', 'Fwd PSH Flags', ' Bwd PSH Flags', ' Fwd URG Flags', ' Bwd URG Flags', ' Fwd Header Length', ' Bwd Header Length', ' Packet Length Mean', 'Init_Win_bytes_forward', ' Init_Win_bytes_backward', 'Active Mean', 'Idle Mean'] is: 0.9995091705704449\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# specify column indexes to select\n",
     "selected_cols_idx = [1,2,3,4,9,13,17,22,27,31,32,33,34,35,36,41,67,68,71,75]\n",
